--- a/404.html
+++ b/404.html
@@ -3,8 +3,8 @@ layout: default
 ---
 
 <div class="container text-center">
-  <h1>Outernet Project has been moved to LinuxPip</h1>
+  <h1>huhong-nus has been moved to monkeybeanonline.com</h1>
 
-  <p><strong>Outernet Project has been moved to LinuxPip</strong></p>
+  <p><strong>huhong-nus has been moved to monkeybeanonline.com</strong></p>
   <p>The requested page could not be found.</p>
 </div>
